src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
	font-family: 'inter', sans-serif;
}

nav a.router-link-exact-active {
	@apply text-primary border-b-2 border-primary;
}

.hamburger-line {
	@apply w-[30px] h-[2px] my-2 block bg-dark;
}

.hamburger-active > span:nth-child(1) {
	@apply rotate-45 translate-x-1;
}

.hamburger-active > span:nth-child(2) {
	@apply scale-0;
}

.hamburger-active > span:nth-child(3) {
	@apply -rotate-45 translate-x-1;
}

.navbar-fixed {
	@apply fixed z-[100] bg-white bg-opacity-80 shadow-sm backdrop-blur-sm;
}

.secondary-desc {
	@apply font-medium text-secondary;
}

